--- a/flask_app/templates/foreword.html
+++ b/flask_app/templates/foreword.html
@@ -16,13 +16,14 @@
                         <h1>Hello {{ user.first_name }}!</h1>
                         <!-- <h2>{{session['user_id']}}</h2> -->
                         <p>
-                            <a href="">I want to eat and drink like a Local</a>
+                            <a href="/visit">I want to eat and drink like a Local</a>
                         </p>
                         <p>
-                            <a href="">I am a Local</a>
+                            <a href="/local">I am a Local</a>
                         </p>
                     </div>
-                </form>               
+                </form>  
+                <a href="/logout">Logout</a>             
             </div>
         </div>
     </div> 
