--- a/flask_app/templates/local.html
+++ b/flask_app/templates/local.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="/local" >
-        <h1>Hi Local</h1>
+        <h1>{{ user.first_name }} is a Local</h1>
     </form>
     
 </body>
