--- a/flask_app/templates/visiting.html
+++ b/flask_app/templates/visiting.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Visiting</title>
+    <style>
+        [class*='col']{
+            padding: 1rem;
+            background-color: aqua;
+            border: 2px solid #fff;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <h1>Place you might like</h1>
+    <div class="container">
+        <div class="row justify-content-center" style="height: 500px">
+            <div class="col-7"><h1>Where are you going {{ user.first_name }}?</h1></div>
+        </div>       
+    </div>
+    
 </body>
 </html>
