--- a/flask_app/templates/local.html
+++ b/flask_app/templates/local.html
@@ -4,12 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Local</title>
 </head>
 <body>
-    <form action="/local" >
-        <h1>{{ user.first_name }} is a Local</h1>
-    </form>
-    
+    <div class="mx-auto card text-center" style="width: 28rem; height: 32rem; background-color: brown; margin-top: 28px;"> 
+        <div class="">
+            <form action="/local" >
+                <h1 class="card-header">{{ user.first_name }} is a Local</h1>
+                <div class="card-body">
+                    <label for="type" class="form-label">Type</label>
+                    <select name="type" class="form-select">
+                        <option value="other">Food</option>
+                        <option value="other">Drinks</option>
+                    </select>
+                    <label for="location">Location(city/state)</label>
+                    <input type="text" name="location" class="form-control" placeholder="muncie/indiana">
+                    <label for="vibe" class="form-label">Vibe</label>
+                    <select name="type" class="form-select">
+                        <option value="other">Chill</option>
+                        <option value="other">Lively</option>
+                        <option value="other">Party Time</option>
+                    </select>
+                    <label for="price">Price</label>
+                    <select name="price" class="form-select">
+                        <option value="other">$</option>
+                        <option value="other">$$</option>
+                        <option value="other">$$$</option>
+                    </select>
+
+                    <label for="description">Tell us more about it</label>
+                    <textarea name="description" cols="25" rows="4" class="form-control"></textarea>
+                </div>
+                <div><br>
+                    <a href="/foreword">Foreword</a>
+                </div>
+            </form>   
+        </div>                        
+    </div>   
 </body>
 </html>
