--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -24,7 +24,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email address</label>
-                                <input type="email" class="form-control" name="email" aria-describedby="emailHelp" style="width: 290px;">
+                                <input type="email" class="form-control" name="email" aria-describedby="emailHelp" style="width: 290px;" placeholder="myemail@gmail.com">
                                 <div id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</div>
                             </div>
                             <div class="mb-3">
