--- a/flask_app/templates/local.html
+++ b/flask_app/templates/local.html
@@ -8,7 +8,7 @@
     <title>Local</title>
 </head>
 <body>
-    <div class="mx-auto card text-center" style="width: 28rem; height: 38rem; background-color: brown; margin-top: 5px;"> 
+    <div class="mx-auto card text-center" style="width: 28rem; height: 38rem; background-color: rgb(215, 46, 46); margin-top: 5px;"> 
         <div class="">
             <h1 class="card-header">{{ user.first_name }} is a Local</h1>
             <form action="/place/create" method="post" >
@@ -20,7 +20,7 @@
                         </div>
                         <div class="col">
                             <label for="state">State</label>
-                            <input type="text" class="form-control" name="state" placeholder="Indiana">
+                            <input type="text" class="form-control" name="state" placeholder="IN">
                         </div>
                     </div>
                     <label for="name">What's the name of the place?</label>
@@ -48,7 +48,7 @@
                 <button type="button" class="btn btn-light">Send</button>    
             </form>  
             <div>
-                <a href="/foreword">Foreword</a>
+                <a href="/home">Home</a>
             </div> 
         </div>                        
     </div>   
