--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -30,8 +30,7 @@
                     
                 </div>
             </form>
-            
-            <a href="/logout">Logout</a>             
+            <a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a>             
     </div> 
 </body>
 </html>
