--- a/flask_app/templates/visiting.html
+++ b/flask_app/templates/visiting.html
@@ -22,6 +22,9 @@
             {% for user in users %}
             <p>{{user.first_name}}</p>
             {% endfor %}
+            
+        </div>
+        <div>
             <a href="/home">Home</a>
         </div>
     </div>
