--- a/flask_app/templates/myplaces.html
+++ b/flask_app/templates/myplaces.html
@@ -12,9 +12,13 @@
         <h1 class="class-header">My Places</h1>
         <div class="card-body">
             {% for place in all_places%}
+            <p>{{place.city}} {{place.state}}</p>
             <p>{{place.name}}</p>
+            <p>{{place.description}}</p>
+            
             <p>
                 <a href="/myplaces">{{place.name}}</a>
+                <a href="/myplaces/{{place.id}}">{{place.name}} ({{place.city}})</a>
             </p>
             {% endfor %}
 
