--- a/flask_app/templates/local.html
+++ b/flask_app/templates/local.html
@@ -46,7 +46,7 @@
                     <label for="description">Tell us more about it</label>
                     <textarea name="description" cols="25" rows="3" class="form-control"></textarea>
                 </div>
-                <button type="button" class="btn btn-outline-dark">Send</button>  
+                <!-- <button type="submit" class="btn btn-outline-dark">Send</button>   -->
                 <input type="submit" value="Create">  
             </form>  
             {% with messages = get_flashed_messages() %}  
