--- a/flask_app/templates/visiting.html
+++ b/flask_app/templates/visiting.html
@@ -5,34 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
     <title>Visiting</title>
-    <!-- <style>
-        [class*='col']{
-            padding: 1rem;
-            background-color: paleturquoise;
-            border: 2px solid #fff;
-            color: #fff;
-        }
-    </style> -->
 </head>
 <body>
-    <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(235, 191, 129); margin-top: 5px;">
-        <h1 class="card-header">Where are you going {{ user.first_name }}?</h1>
-        <div class="card-body">
-            <form action="/places/goplaces", method="post">
-                <label for="places">City:</label>
-                <input type="text" name="places">
-                <button type="submit">Find places</button>
-
-            </form>
-            <!-- {% for user in users %}
-            <p>{{user.first_name}}</p>
-            {% endfor %} -->
+    <nav class="navbar navbar-dark bg-light">
+        <h3><a class="navbar-brand" style="color: black;">Locals</a></h3>
+        <div class="d-md-inline-flex">
+            <p><a href="/home">Home</a></p>
+            <p><a href="/myplaces">My Places</a></p>
+            <p><a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a> </p> 
+        </div>
+    </nav>
+    <div class="container">
+        <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(235, 191, 129); margin-top: 5px;">
+            <h1 class="card-header">Where are you going {{ user.first_name }}?</h1>
+            <div class="card-body">
+                <form action="/places/goplaces">
+                    <label for="places">City:</label>
+                    <input type="text" name="city">
+                    <p><button type="submit">Find places</button></p>
+    
+                </form>
+                
+            </div>
             
         </div>
-        <div>
-            <a href="/home">Home</a>
-        </div>
+
     </div>
+    
 </body>
 </html>
