--- a/flask_app/templates/local.html
+++ b/flask_app/templates/local.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
+    <!-- <img src="{{ url_for('static', filename='img/loinpic.avif') }}"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <title>Visiting</title>
+
+
+
     <title>Local</title>
 </head>
 <body>
-    <div class="mx-auto card text-center" style="width: 28rem; height: 38rem; background-color: rgb(237, 67, 73); margin-top: 5px;"> 
+    <div class="mx-auto card text-center" style="width: 28rem; height: 38rem; background-color: rgb(244,140,6); margin-top: 5px;"> 
         <div class="">
             <h1 class="card-header">{{ user.first_name }} is a Local</h1>
             <form action="/place/create" method="post" >
@@ -26,11 +34,6 @@
                     </div>
                     <label for="name">What's the name of the place?</label>
                     <input type="text" name="name" class="form-control">
-
-                    <!-- <label for="type" class="form-label">Type</label> 
-                    <select name="type" class="form-select"> -->
-                        <!-- <option value="other">Food</option>
-                        <option value="other">Drinks</option> -->
 
                     <label for="type">Type</label>
                     <div>
@@ -61,7 +64,7 @@
                     <textarea name="description" cols="25" rows="3" class="form-control"></textarea>
                 </div>
                 <!-- <button type="submit" class="btn btn-outline-dark">Send</button>   -->
-                <input type="submit" value="Create">  
+                <p><input type="submit" value="Create"> </p> 
             </form>  
             {% with messages = get_flashed_messages() %}  
                         {% if messages %}                           
@@ -70,9 +73,7 @@
                             {% endfor %}
                         {% endif %}
                     {% endwith %}   
-            <div>
-                <a href="/home">Home</a>
-            </div> 
+            <p><a href="/home">Home</a><p> 
         </div>                        
     </div>   
 </body>
