--- a/flask_app/templates/myplaces.html
+++ b/flask_app/templates/myplaces.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
     <title>myplaces</title>
 </head>
 <body>
-    <div class="mx-auto card text-center" style="width: 40rem; height: 38rem; background-color: rgba(41, 18, 189, 0.496); margin-top: 5px;">
+    <nav class="navbar navbar-dark bg-light">
+        <h3><a class="navbar-brand" style="color: black;">Locals</a></h3>
+        <div class="d-md-inline-flex">
+            <p><a href="/home">Home</a></p>
+            <p><a href="/myplaces">My Places</a></p>
+            <p><a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a> </p> 
+        </div>
+    </nav>
+    <div class="mx-auto card text-center" style="width: 40rem; height: 38rem; background-color: rgb(240, 113, 103); margin-top: 5px;">
         <h1 class="class-header">My Places</h1>
         <div class="card-body">
 
@@ -24,9 +35,6 @@
 
         </div>
         <p><a href="/local">Add a Place</a></p>
-        <div>
-            <a href="/home">Home</a>
-        </div>
     </div>
     
 </body>
