--- a/flask_app/templates/placereview.html
+++ b/flask_app/templates/placereview.html
@@ -5,29 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
     <title>PlaceReview</title>
 </head>
 <body>
     <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(173, 220, 55); margin-top: 5px;">
-        <!-- <form action="/places/goplaces" method="POST"> -->
+        <form action="/places/goplaces/{{places.id}}" method="POST"> 
             <div class="card_title"><h1></h1></div>
         <div class="card-body">
         
-            <h4>These are the places in {{places}} <h4>
+            
+            
+            {% with messages = get_flashed_messages() %}  
+            {% if messages %}                           
+                {% for message in messages %}           
+                <p>{{message}}</p>                   
+                {% endfor %}
+            {% endif %}
+        {% endwith %}   
+
             {% for place in places %}
-            <p>{{place.city}} {{place.state}}</p>
-            <p>{{place.name}}</p>
-            
-            
             <p>
-                <!-- <a href="/myplaces">{{place.name}}</a> -->
-                <a href="/myplaces.city{{place.city}}">{{place.name}} ({{place.city}})</a>
+                <a href="/viewplaces/{{place.id}}">{{place.name}}</a>
                 <p>{{place.description}}</p>
             </p>  
             {% endfor %}
 
         </div>
-    
+        <div>
+            <p><a href="/myplaces">My Places</a></p>   
+        </div>
         <div>
             <a href="/home">Home</a>
         </div>
