--- a/flask_app/templates/myplacedit.html
+++ b/flask_app/templates/myplacedit.html
@@ -7,10 +7,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bigshot+One&family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Merriweather+Sans:ital,wght@1,800&family=Newsreader:opsz,wght@6..72,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
     <title>Edit</title>
 </head>
 <body>
-    <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(222, 154, 60); margin-top: 5px;">
+    <nav class="navbar navbar-dark bg-light">
+        <h1><a class="navbar-brand" style="color: black;">Locals</a></h1>
+        <ul class="nav-links">
+            <li><h5><a href="/home">Home</a></h5></li>
+            <li><h5><a href="/myplaces">My Places</a></h5></li>
+            <li><h5><a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a> </h5></li>
+        </ul>
+    </nav>
+    <div class="mx-auto card text-center" style="width: 28rem; height: 44rem; background-color: rgb(222, 154, 60); margin-top: 5px;">
         <div class="card-body">
             <form action="/place/update/{{place.id}}" method="POST">
                 <h1>{{place.name}}</h1>
@@ -18,45 +28,38 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col">
-                            <label for="city">City</label>
+                            <p><label for="city">City</label></p>
                             <input type="text"  name="city" class="form-control" placeholder="Muncie" value="{{place.city}}">
                         </div>
                         <div class="col">
-                            <label for="state">State</label>
+                            <p><label for="state">State</label></p>
                             <input type="text" class="form-control" name="state" placeholder="IN" value="{{place.state}}">
                         </div>
                     </div>
-                    <label for="name">What's the name of the place?</label>
+                    <p><label for="name">What's the name of the place?</label></p>
                     <input type="text" name="name" class="form-control" value="{{place.name}}">
-                    <label for="type" class="form-label">Type</label>                
+                    <p><label for="type" class="form-label">Type</label></p>                
                     <select name="type" class="form-select" value="{{place.type}}">
-                        <option value="other">Food</option>
-                        <option value="other">Drinks</option>
+                        <option value="Food">Food</option>
+                        <option value="Drinks">Drinks</option>
                     </select>
-                    <label for="vibe" class="form-label">Vibe</label>
+                    <p><label for="vibe" class="form-label">Vibe</label></p>
                     <select name="vibe" class="form-select" value="{{place.vibe}}">
-                        <option value="other">Chill</option>
-                        <option value="other">Lively</option>
-                        <option value="other">Party Time</option>
+                        <option value="Chill">Chill</option>
+                        <option value="Lively">Lively</option>
+                        <option value="Party">Party Time</option>
                     </select>
-                    <label for="price">Price</label>
+                    <p><label for="price">Price</label></p>
                     <select name="price" class="form-select" value="{{place.price}}">
-                        <option value="other">$</option>
-                        <option value="other">$$</option>
-                        <option value="other">$$$</option>
+                        <option value="$">$</option>
+                        <option value="$$">$$</option>
+                        <option value="$$$">$$$</option>
                     </select>
-                    <label for="description">Tell us more about it</label>
+                    <p><label for="description">Tell us more about it</label></p>
                     <textarea name="description" cols="25" rows="3" class="form-control">{{place.description}}</textarea>
                 </div>
-                <!-- <button type="submit" class="btn btn-outline-dark">Send</button>   -->
-                <input type="submit" value="Edit" class="btn btn-outline-danger">  
+                <h5><input type="submit" value="Edit"></h5>
             </form>  
-        </div>
-        <p>
-            <a href="/myplaces">My Places</a>
-        </p>
-        <div>
-            <a href="/home">Home</a>
         </div>
     </div>
 </body>
