--- a/flask_app/templates/myplaces.html
+++ b/flask_app/templates/myplaces.html
@@ -8,33 +8,40 @@
     <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bigshot+One&family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Merriweather+Sans:ital,wght@1,800&family=Newsreader:opsz,wght@6..72,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
     <title>myplaces</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-light">
+    <nav class="navbar bg-light">
         <h3><a class="navbar-brand" style="color: black;">Locals</a></h3>
-        <div class="d-md-inline-flex">
-            <p><a href="/home">Home</a></p>
-            <p><a href="/myplaces">My Places</a></p>
-            <p><a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a> </p> 
-        </div>
+        <ul class="nav-links">
+            <li><h5><a href="/home">Home</a></h5></li>
+            <li><h5><a href="/myplaces">My Places</a></h5></li>
+            <li><h5><a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a> </h5></li>
+        </ul>
     </nav>
     <div class="mx-auto card text-center" style="width: 40rem; height: 38rem; background-color: rgb(240, 113, 103); margin-top: 5px;">
         <h1 class="class-header">My Places</h1>
         <div class="card-body">
 
             {% for place in places %}
-            <p>
-                <a href="/viewplaces/{{place.id}}">{{place.name}} ({{place.city}})</a>
+            <div>
+                
+                <h5><a href="/viewplaces/{{place.id}}">{{place.name}} ({{place.city}})</a></h5>
                 {% if session['user_id'] == place.reviewer.id %}
-                <a href="/place/edit/{{place.id}}">Edit</a>
-                <a href="/delete/{{place.id}}">Delete</a>
+                <p><a href="/place/edit/{{place.id}}">Edit</a>
+                <a href="/delete/{{place.id}}">Delete</a></p>
+                <form action="place/delete/{{place.id}}" method="POST">
+                    <input name="id" value="{{place.id}}" type="hidden">
+                    <p><button type="submit" class="btn btn-outline-dark btn-sm">Delete</button></p>
+                </form>
                 {% endif %}
-            </p>  
+                
+            </div>  
             {% endfor %}
 
         </div>
-        <p><a href="/local">Add a Place</a></p>
+        <h5><a href="/local">Add a Place</a></h5>
     </div>
     
 </body>
