--- a/flask_app/templates/placereview.html
+++ b/flask_app/templates/placereview.html
@@ -6,38 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bigshot+One&family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Newsreader:opsz,wght@6..72,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
+
     <title>PlaceReview</title>
 </head>
 <body>
-    <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(173, 220, 55); margin-top: 5px;">
-        <form action="/places/goplaces/{{places.id}}" method="POST"> 
-            <div class="card_title"><h1></h1></div>
-        <div class="card-body">
-        
-            
-            
-            {% with messages = get_flashed_messages() %}  
-            {% if messages %}                           
-                {% for message in messages %}           
-                <p>{{message}}</p>                   
+    <nav class="navbar navbar-dark bg-light">
+        <h3><a class="navbar-brand" style="color: black;">Locals</a></h3> 
+        <ul class="nav-links">
+            <li><h5><a href="/home">Home</a></h5></li>
+            <li><h5><a href="/myplaces">My Places</a></h5></li>
+            <li><h5><a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a> </h5></li>
+        </ul>
+    </nav>
+    <div class="container"> 
+        <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(249, 190, 199); margin-top: 5px;">
+                <div class="card_title"><h1></h1></div>
+                <div class="card-body">      
+                {% with messages = get_flashed_messages() %}  
+                {% if messages %}                           
+                    {% for message in messages %}           
+                    <p>{{message}}</p>                   
+                    {% endfor %}
+                {% endif %}
+                {% endwith %}   
+    
+                {% for place in places %}
+                <h5><a href="/viewplaces/{{place.id}}">{{place.name}}</a></h5>
+                <p>{{place.description}}</p>    
                 {% endfor %}
-            {% endif %}
-        {% endwith %}   
+            </div>
+        </div>
 
-            {% for place in places %}
-            <p>
-                <a href="/viewplaces/{{place.id}}">{{place.name}}</a>
-                <p>{{place.description}}</p>
-            </p>  
-            {% endfor %}
-
-        </div>
-        <div>
-            <p><a href="/myplaces">My Places</a></p>   
-        </div>
-        <div>
-            <a href="/home">Home</a>
-        </div>
     </div>
+    
 </body>
 </html>
