--- a/flask_app/templates/viewplaces.html
+++ b/flask_app/templates/viewplaces.html
@@ -7,30 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bigshot+One&family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Merriweather+Sans:ital,wght@1,800&family=Newsreader:opsz,wght@6..72,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
     <title>viewplaces</title>
 </head>
 <body>
-    <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(103, 138, 14); margin-top: 5px;">
+    <nav class="navbar navbar-dark bg-light">
+        <h3><a class="navbar-brand" style="color: black;">Locals</a></h3>
+        <ul class="nav-links">
+            <li><h5><a href="/home">Home</a></h5></li>
+            <li><h5><a href="/myplaces">My Places</a></h5></li>
+            <li><h5><a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a> </h5></li>
+        </ul>
+    </nav>
+    <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(255, 117, 143); margin-top: 5px;">
         <div class="card-title">
-            <p><h2>{{place.name}}</h2> <h5>({{place.city}})</h5></p>
-            <p>{{place.vibe}}</p>
-            <p>{{place.description}}</p>
-            <p>{{place.price}}</p>
-            
-
-
-            <div class="card-body">
-
+            <h1>{{place.name}}</h1> <h5>({{place.city}})</h5>
+            <div>
+                <p>Atmosphere: {{place.vibe}}</p>
+                <p>Description: {{place.description}}</p>
+                <p>Price: {{place.price}}</p>
             </div>
-
+            <div class="card-body">
+            </div>
         </div>
-        <div>
-            <a href="/myplaces">My Places</a>
-        </div>
-        <div>
-            <a href="/home">Home</a>
-        </div>
-    </div>
-    
+    </div>    
 </body>
 </html>
